2004-07-10  Kees Cook  <kees@outflux.net>

	* src/knot.cpp: solved bug #988513: knot could stay grabbed in
	  situations where the tool went away but never got "button_release"
	  event.  This patch uses the "enter" and "leave" notifiers to disable
	  the grab before a "motion" can come and snag the knot.

2004-07-09  Kees Cook  <kees@outflux.net>

	* src/widgets/paint-selector.cpp: solved bug #984902: the pattern
	  menu was being destroyed since it was remaining part of the frame
	  that was being destroyed whenever the selector changed.  It gets
	  ref-counted, disconnected, and destroyed correctly now.
	* mkinstalldirs: automake 1.8 stopped including "mkinstalldirs", but
	  intltool still uses it.  We'll need to keep this until intltool
	  fixes the bug.  intltool 0.31 and earlier are all buggy.

2004-07-09  Carl Hetherington  <inkscape@carlh.net>

	* src/draw-context.cpp: remove some debugging g_prints.

2004-07-08  MenTaLguY  <mental@rydia.net>

	* src/interface.cpp: fixed crash on desktop context menu

	* src/desktop.h, src/desktop.cpp:

	  added SPDesktop::isWithinViewport() to conveniently determine
	  if an item is within view

	  also made isLayer() const

	* src/sp-object.h: added SPObject::hasChildren() predicate

	* src/sp-object.cpp: revert to old behavior of breaking parent
	  link before emitting "release" signal

	* src/selection-chemistry.cpp: rewrote sp_selection_item_next()
	  and sp_selection_item_prev() to work with layers

2004-07-08  Carl Hetherington  <inkscape@carlh.net>

	* src/libnrtype/FontFactory.cpp: disable printing of debug
	messages.

	* src/sp-item-group.cpp: give it a snappoints method to fix
	937318.

	* src/draw-context.cpp: fix a couple of places where Shift isn't
	checked before snapping.
	

2004-07-07  MenTaLguY  <mental@rydia.net>

	* src/desktop.cpp, src/interface.cpp: remove the word "layer"
	  for now, and disable the layer selector when the user is not
	  inside a group

2004-07-07  Kees Cook  <kees@outflux.net>
