@@ -1,3 +1,7 @@
+2004-07-10  MenTaLguY  <mental@rydia.net>
+
+	* src/sp-image.cpp: prospective fix for bug #979858
+
 2004-07-10  Kees Cook  <kees@outflux.net>
 
 	* src/knot.cpp: solved bug #988513: knot could stay grabbed in
